--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,3 +17,5 @@ jobs:
         node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    steps:
+    - run: npm i
