--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "name": "The name of your application",
 "short_name": "This name will show in your Windows taskbar, in the start menu, and Android homescreen",
-"start_url": "https://betting.oyesters.in/index.html",
+"start_url": "https://betting.oyesters.in",
 "display": "standalone",
 "description": "A description for your application",
 "lang": " The default language of your application",
