Chinmay - Change language

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 "start_url": "https://betting.oyesters.in",
 "display": "standalone",
 "description": "A description for your application",
-"lang": " The default language of your application",
+"lang": "en",
 "dir": "auto",
 "theme_color": "#000000",
 "background_color": "#000000",
