--- a/manifest.json
+++ b/manifest.json
@@ -1,49 +1,72 @@
 {
-  "name": "The name of your application",
-  "short_name": "This name will show in your Windows taskbar, in the start menu, and Android homescreen",
-  "start_url": "./",
-  "scope": ".",
-  "display": "standalone",
-  "description": "A description for your application",
-  "lang": "en",
-  "dir": "auto",
-  "theme_color": "#000000",
-  "background_color": "#000000",
-  "orientation": "any",
-  "icons": [
-    {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "./assets/screen1.jpg",
-      "sizes": "2880x1800",
-      "type": "image/png",
-      "description": "A screenshot of the home page"
-    }
-  ],
-  "related_applications": [
-    {
-      "platform": "windows",
-      "url": " The URL to your app in that app store"
-    }
-  ],
-  "prefer_related_applications": true,
-  "shortcuts": [
-    {
-      "name": "The name you would like to be displayed for your shortcut",
-      "url": "The url you would like to open when the user chooses this shortcut. This must be a URL local to your PWA. For example: If my start_url is /, this URL must be something like /shortcut",
-      "description": "A description of the functionality of this shortcut"
-    }
-  ]
-}
+    "dir": "ltr",
+    "lang": "en",
+    "name": "Webboard",
+    "scope": "/",
+    "display": "standalone",
+    "start_url": "/",
+    "short_name": "Webboard",
+    "theme_color": "#FFFFFF",
+    "description": "Enhance your work day and solve your cross platform whiteboarding needs with webboard! Draw text, shapes, attach images and more and share those whiteboards with anyone through OneDrive!",
+    "orientation": "any",
+    "background_color": "#FFFFFF",
+    "related_applications": [],
+    "prefer_related_applications": false,
+    "screenshots": [
+      {
+        "src": "assets/screen.png"
+      },
+      {
+        "src": "assets/screen.png"
+      },
+      {
+        "src": "assets/screen.png"
+      }
+    ],
+    "features": [
+      "Cross Platform",
+      "low-latency inking",
+      "fast",
+      "useful AI"
+    ],
+    "icons": [
+      {
+        "src": "/icons/manifest-icon-192.maskable.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
+        "src": "/icons/manifest-icon-192.maskable.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "maskable"
+      },
+      {
+        "src": "/icons/manifest-icon-512.maskable.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
+        "src": "/icons/manifest-icon-512.maskable.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable"
+      }
+    ],
+    "shortcuts": [
+      {
+        "name": "Start Live Session",
+        "short_name": "Start Live",
+        "description": "Jump direction into starting or joining a live session",
+        "url": "/?startLive",
+        "icons": [
+          {
+            "src": "https://pwabuilder.com/assets/icons/icon_192.png",
+            "sizes": "192x192"
+          }
+        ]
+      }
+    ]
+  }
