--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "./",
   "scope": ".",
   "display": "standalone",
-  "description": "Play your game",
+  "description": "Play Game",
   "lang": "en",
   "dir": "auto",
   "theme_color": "#000000",
@@ -12,24 +12,16 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
+      "src": "./assets/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_192.png",
+      "src": "./assets/192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "./assets/screen1.jpg",
-      "sizes": "2880x1800",
-      "type": "image/png",
-      "description": "A screenshot of the home page"
     }
   ],
   "related_applications": [
